Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15018

o2iblnd: kiblnd_dev_failover should treat cmid->device == NULL as an error

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • 3
    • 9223372036854775807

      Even if rdma_bind_addr is successful, kiblnd_dev_failover should treat cmid->device == NULL as an error in order to later avoid calling kiblnd_set_ni_fatal_on with possibly dev->ibd_hdev == NULL.

      This issue was introduced by LU-14806 (o2iblnd: clear fatal error on successful failover)

            ssmirnov Serguei Smirnov
            ssmirnov Serguei Smirnov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: